--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: customer-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/customer_service
+    password:
+    username: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
   profiles:
     active:
       - default
